refactor(auth): replace Map bodies with a typed, validated contract
Closes the remaining part of audit findings HIGH-5 and HIGH-6, plus
LOW-12 and LOW-13. /auth/** was the last endpoint group still shaped like
the original code: untyped bodies, hand-rolled null checks, a nested
switch on templateType, and a try/catch per method. The controller drops
from 375 lines to 155, almost all of it now translation.

Contract:
- TemplatedEmailRequest is a sealed interface with seven records, one per
  templateType, deserialised by Jackson from a closed @JsonSubTypes set.
  Each declares its own required fields, so "approval" now demands
  approvalUrl and denyUrl while "password-reset" demands resetUrl -
  previously every field was optional because the body was a Map, and the
  only way to learn what a template needed was to read the source.
  The wire format is unchanged, so existing callers are unaffected.
- Polymorphic deserialisation is the safe form: the permitted types are
  fixed at compile time and the wire carries a short name, never a class
  name. An unrecognised value is rejected before any object is built.
- ManualDecisionRequest and UserDecisionResponse replace Map bodies and
  the nested Map.of(...) response literals.

Failure handling:
- UserApprovalEmailService's seven public boolean-returning methods
  become one send() over the sealed type. Failures throw
  EmailProviderException instead of returning false, which the controller
  had reported as HTTP 200 with "emailSent": false - so a caller saw
  success for a message that never arrived.
- Extract SmtpFailures so both SMTP paths classify the same failure
  identically. SpringMailService's catch ladder now delegates to it.
- An unknown templateType returns UNKNOWN_TEMPLATE_TYPE listing the valid
  values, derived from the annotation rather than hardcoded, instead of
  "could not be parsed as JSON" - the document is valid, one value is not.

Dispatch is an instanceof chain rather than a pattern-matching switc